trunk/Archive2/fc/c2c0c27c11629b/output
main.cpp:18:14: error: no member named 'make_unique' in namespace 'std'
    foo(std::make_unique<B>());
        ~~~~~^
main.cpp:18:26: error: 'B' does not refer to a value
    foo(std::make_unique<B>());
                         ^
main.cpp:6:7: note: declared here
class B : public A {};
      ^
main.cpp:18:29: error: expected expression
    foo(std::make_unique<B>());
                            ^
3 errors generated.
